[package]
name = "glimpse"
version = "0.1.0"
description = "A TUI for managing your Linux system's LEDs"
authors = ["MMK21Hub <50421330+MMK21Hub@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
thiserror = "2.0.12"
